# brain-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
src/brain_agent/: __init__.py  config.py  main.py
src/brain_agent/agent/: auth.py  intent.py  prompt.py  runner.py
src/brain_agent/brain/: puller.py  repo.py  validation.py
src/brain_agent/telegram/: client.py  formatter.py  webhook.py
src/brain_agent/tools/: brain_mcp.py
tests/: test_auth.py  test_intent.py  test_prompt.py  test_validation.py
